<resources>
    <string name="appName">Tem Remédio Aí</string>
    <string name="action_about">Sobre o Aplicativo</string>
    <string name="titleActivityUbsMaps">Localização</string>
    <string name="titleActivityAbout">Informações</string>
    <string name="titleActivitySelectUbs">UBSs Encontradas</string>
    <string name="titleActivitySelectMedicine">Remedios Encontrados</string>
    <string name="testeTexto">testeTexto</string>
    <string name="search">Pesquisar...</string>
    <string name="dsc_about">O aplicativo Tem Remédio Aí? tem como objetivo facilitar o acesso
                            à informação da disponibilidade de medicamentos gratuitamente
                            distribuídos em Unidades Básicas de Saúde, Hospitais e Farmácias de
                            Alto Custo da Secretaria de Saúde do Distrito Federal.
                            </string>
    <string name="about">Sobre o Aplicativo</string>
    <string name="selectedUBS">UBS Selecionada</string>
    <string name="ubsQuantity">Quantidade de Locais</string>
    <string name="version">Versão 1.0</string>
    <string name="ubs_neighborhood">Bairro da UBS</string>
    <string name="ubs_name">Nome da UBS</string>
    <string name="ubs_city">Cidade de Localizaçao</string>
    <string name="ubs_attention_level">Nível de Atenção</string>
    <string name="medicines">Remédios</string>
    <string name="description">Descrição</string>
    <string name="action_login">Log in</string>
    <string name="action_log_in">Entrar</string>
    <string name="action_sign_in">Cadastrar</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="action_sign_in_short">Sing in</string>
    <string name="prompt_password2">Confirmação da senha</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_age">Idade</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nome</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="error_invalid_email">O email digitado é invalido</string>
    <string name="error_invalid_password">A senha é muito curta</string>
    <string name="error_field_required">Ops!!! Esse campo não foi preenchido.</string>
    <string name="cancel">Cancelar</string>
    <string name="error_different_password">Ops!!! As senhas são diferentes.</string>
    <string name="error_invalid_age">Idade inválida.</string>
    <string name="exit">Sair</string>
    <string name="user">Usuário</string>
    <string name="error_invalid_genre">Sexo não escolhido</string>
    <string name="error_character">Caracter inválido digitado.</string>
    <string name="prompt_username">Username</string>
    <string name="informed_ubs">Ubs Informada</string>
    <string name="selected_ubs">UBS Selecionada</string>
    <string name="informed_medicine">Remédio Informado</string>
    <string name="selected_medicine">Remédio Selecionado</string>
    <string name="not_available">Não Disponível</string>
    <string name="available">Disponível</string>
    <string name="title_activity_log_in">Entrar com username</string>
    <string name="title_activity_sign_up">Cadastra-se</string>
    <string name="facebook_app_id">801509273283863</string>
    <string name="action_log_in_facebook">Entrar com Facebook</string>
</resources>
