<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gppmds.tra.temremdioa.controller.Inform">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/medicine_inform_title"
        android:textColorHint="#000000"
        android:backgroundTint="#000000"
        android:hint="@string/selected_medicine"
        android:singleLine="true"
        android:ems="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/informed_medicine"
        android:textColor="#424242"
        android:backgroundTint="#000000"
        android:hint="@string/informed_medicine"
        android:singleLine="true"
        android:ems="10"
        android:layout_below="@id/medicine_inform_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/ubs_inform_title"
        android:textColorHint="#000000"
        android:backgroundTint="#000000"
        android:hint="@string/selected_ubs"
        android:singleLine="true"
        android:ems="10"
        android:layout_below="@id/informed_medicine"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/informed_ubs"
        android:textColor="#424242"
        android:backgroundTint="#000000"
        android:hint="@string/informed_ubs"
        android:singleLine="true"
        android:ems="10"
        android:layout_below="@id/ubs_inform_title"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="informar"
        android:id="@+id/inform_button"
        android:layout_above="@+id/cancel_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CANCELAR"
        android:id="@+id/cancel_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/inform_button"
        android:orientation="horizontal"
        android:id="@+id/radio_group_inform"
        android:layout_centerInParent="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:id="@+id/available"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:checked="false"
            android:buttonTint="#000000"
            android:layout_above="@+id/inform_button"
            android:layout_gravity="left"
            android:layout_marginRight="20dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:id="@+id/not_available"
            android:layout_alignTop="@+id/available"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:checked="false"
            android:buttonTint="#000000" />

    </RadioGroup>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_picker_inform"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/informed_ubs"
        android:layout_above="@+id/radio_group_inform"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:longClickable="false"
        android:nestedScrollingEnabled="false"
        android:startYear="2015"
        android:minDate="2015-01-01" />
</RelativeLayout>
